bindings/c/include/wickra.h

typedef struct CoefficientOfVariation CoefficientOfVariation;
typedef struct CommonSenseRatio CommonSenseRatio;
typedef struct ConditionalValueAtRisk ConditionalValueAtRisk;
typedef struct ConnorsRsi ConnorsRsi;
typedef struct Coppock Coppock;
typedef struct CorrelationTrendIndicator CorrelationTrendIndicator;
typedef struct CyberneticCycle CyberneticCycle;
typedef struct Decycler Decycler;
typedef struct DecyclerOscillator DecyclerOscillator;
typedef struct Dema Dema;
typedef struct DerivativeOscillator DerivativeOscillator;
typedef struct DetrendedStdDev DetrendedStdDev;
typedef struct DisparityIndex DisparityIndex;
typedef struct Dpo Dpo;
typedef struct DrawdownDuration DrawdownDuration;
typedef struct DynamicMomentumIndex DynamicMomentumIndex;
typedef struct EhlersStochastic EhlersStochastic;
typedef struct Ehma Ehma;
void wickra_coefficient_of_variation_batch(struct CoefficientOfVariation *handle,
                                           const double *input,
                                           double *out,
                                           uintptr_t n);
void wickra_coefficient_of_variation_reset(struct CoefficientOfVariation *handle);
void wickra_coefficient_of_variation_free(struct CoefficientOfVariation *handle);
struct CommonSenseRatio *wickra_common_sense_ratio_new(uintptr_t period);
double wickra_common_sense_ratio_update(struct CommonSenseRatio *handle, double value);
void wickra_common_sense_ratio_batch(struct CommonSenseRatio *handle,
                                     const double *input,
                                     double *out,
                                     uintptr_t n);
void wickra_common_sense_ratio_reset(struct CommonSenseRatio *handle);
void wickra_common_sense_ratio_free(struct CommonSenseRatio *handle);
struct ConditionalValueAtRisk *wickra_conditional_value_at_risk_new(uintptr_t period,
                                                                    double confidence);
double wickra_conditional_value_at_risk_update(struct ConditionalValueAtRisk *handle, double value);
void wickra_conditional_value_at_risk_batch(struct ConditionalValueAtRisk *handle,
                                            const double *input,
                                            double *out,
                                            uintptr_t n);
void wickra_conditional_value_at_risk_reset(struct ConditionalValueAtRisk *handle);
void wickra_conditional_value_at_risk_free(struct ConditionalValueAtRisk *handle);
struct ConnorsRsi *wickra_connors_rsi_new(uintptr_t period_rsi,
                                          uintptr_t period_streak,
                                          uintptr_t period_rank);
double wickra_connors_rsi_update(struct ConnorsRsi *handle, double value);
void wickra_connors_rsi_batch(struct ConnorsRsi *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_connors_rsi_reset(struct ConnorsRsi *handle);
void wickra_connors_rsi_free(struct ConnorsRsi *handle);
struct Coppock *wickra_coppock_new(uintptr_t roc_long_period,
                                   uintptr_t roc_short_period,
                                   uintptr_t wma_period);
double wickra_coppock_update(struct Coppock *handle, double value);
void wickra_coppock_batch(struct Coppock *handle, const double *input, double *out, uintptr_t n);
void wickra_coppock_reset(struct Coppock *handle);
void wickra_coppock_free(struct Coppock *handle);
struct CorrelationTrendIndicator *wickra_correlation_trend_indicator_new(uintptr_t period);
double wickra_correlation_trend_indicator_update(struct CorrelationTrendIndicator *handle,
                                                 double value);
void wickra_correlation_trend_indicator_batch(struct CorrelationTrendIndicator *handle,
                                              const double *input,
                                              double *out,
                                              uintptr_t n);
void wickra_correlation_trend_indicator_reset(struct CorrelationTrendIndicator *handle);
void wickra_correlation_trend_indicator_free(struct CorrelationTrendIndicator *handle);
struct CyberneticCycle *wickra_cybernetic_cycle_new(uintptr_t period);
double wickra_cybernetic_cycle_update(struct CyberneticCycle *handle, double value);
void wickra_cybernetic_cycle_batch(struct CyberneticCycle *handle,
                                   const double *input,
                                   double *out,
                                   uintptr_t n);
void wickra_cybernetic_cycle_reset(struct CyberneticCycle *handle);
void wickra_cybernetic_cycle_free(struct CyberneticCycle *handle);
struct Decycler *wickra_decycler_new(uintptr_t period);
double wickra_decycler_update(struct Decycler *handle, double value);
void wickra_decycler_batch(struct Decycler *handle, const double *input, double *out, uintptr_t n);
void wickra_decycler_reset(struct Decycler *handle);
void wickra_decycler_free(struct Decycler *handle);
struct DecyclerOscillator *wickra_decycler_oscillator_new(uintptr_t fast, uintptr_t slow);
double wickra_decycler_oscillator_update(struct DecyclerOscillator *handle, double value);
void wickra_decycler_oscillator_batch(struct DecyclerOscillator *handle,
                                      const double *input,
                                      double *out,
                                      uintptr_t n);
void wickra_decycler_oscillator_reset(struct DecyclerOscillator *handle);
void wickra_decycler_oscillator_free(struct DecyclerOscillator *handle);
struct Dema *wickra_dema_new(uintptr_t period);
double wickra_dema_update(struct Dema *handle, double value);
void wickra_dema_batch(struct Dema *handle, const double *input, double *out, uintptr_t n);
void wickra_dema_reset(struct Dema *handle);
void wickra_dema_free(struct Dema *handle);
struct DerivativeOscillator *wickra_derivative_oscillator_new(uintptr_t rsi_period,
                                                              uintptr_t smooth1,
                                                              uintptr_t smooth2,
                                                              uintptr_t signal_period);
double wickra_derivative_oscillator_update(struct DerivativeOscillator *handle, double value);
void wickra_derivative_oscillator_batch(struct DerivativeOscillator *handle,
                                        const double *input,
                                        double *out,
                                        uintptr_t n);
void wickra_derivative_oscillator_reset(struct DerivativeOscillator *handle);
void wickra_derivative_oscillator_free(struct DerivativeOscillator *handle);
struct DetrendedStdDev *wickra_detrended_std_dev_new(uintptr_t period);
double wickra_detrended_std_dev_update(struct DetrendedStdDev *handle, double value);
void wickra_detrended_std_dev_batch(struct DetrendedStdDev *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_detrended_std_dev_reset(struct DetrendedStdDev *handle);
void wickra_detrended_std_dev_free(struct DetrendedStdDev *handle);
struct DisparityIndex *wickra_disparity_index_new(uintptr_t period);
double wickra_disparity_index_update(struct DisparityIndex *handle, double value);
void wickra_disparity_index_batch(struct DisparityIndex *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_disparity_index_reset(struct DisparityIndex *handle);
void wickra_disparity_index_free(struct DisparityIndex *handle);
struct Dpo *wickra_dpo_new(uintptr_t period);
double wickra_dpo_update(struct Dpo *handle, double value);
void wickra_dpo_batch(struct Dpo *handle, const double *input, double *out, uintptr_t n);
void wickra_dpo_reset(struct Dpo *handle);
void wickra_dpo_free(struct Dpo *handle);
struct DrawdownDuration *wickra_drawdown_duration_new(void);
double wickra_drawdown_duration_update(struct DrawdownDuration *handle, double value);
void wickra_drawdown_duration_batch(struct DrawdownDuration *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_drawdown_duration_reset(struct DrawdownDuration *handle);
void wickra_drawdown_duration_free(struct DrawdownDuration *handle);
struct DynamicMomentumIndex *wickra_dynamic_momentum_index_new(uintptr_t period);
double wickra_dynamic_momentum_index_update(struct DynamicMomentumIndex *handle, double value);
void wickra_dynamic_momentum_index_batch(struct DynamicMomentumIndex *handle,
                                         const double *input,
                                         double *out,
                                         uintptr_t n);
void wickra_dynamic_momentum_index_reset(struct DynamicMomentumIndex *handle);
void wickra_dynamic_momentum_index_free(struct DynamicMomentumIndex *handle);
struct EhlersStochastic *wickra_ehlers_stochastic_new(uintptr_t period);
double wickra_ehlers_stochastic_update(struct EhlersStochastic *handle, double value);
void wickra_ehlers_stochastic_batch(struct EhlersStochastic *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_ehlers_stochastic_reset(struct EhlersStochastic *handle);
void wickra_ehlers_stochastic_free(struct EhlersStochastic *handle);
struct Ehma *wickra_ehma_new(uintptr_t period);
double wickra_ehma_update(struct Ehma *handle, double value);
void wickra_ehma_batch(struct Ehma *handle, const double *input, double *out, uintptr_t n);
void wickra_ehma_reset(struct Ehma *handle);