bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_coefficient_of_variation_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_coefficient_of_variation_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_coefficient_of_variation_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_common_sense_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_common_sense_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_common_sense_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_common_sense_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_common_sense_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_conditional_value_at_risk_new(nuint period, double confidence);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_conditional_value_at_risk_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_conditional_value_at_risk_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_conditional_value_at_risk_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_conditional_value_at_risk_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_connors_rsi_new(nuint periodRsi, nuint periodStreak, nuint periodRank);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_connors_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_connors_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_connors_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_connors_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_coppock_new(nuint rocLongPeriod, nuint rocShortPeriod, nuint wmaPeriod);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_coppock_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_coppock_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_coppock_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_coppock_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_correlation_trend_indicator_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_correlation_trend_indicator_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_correlation_trend_indicator_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_correlation_trend_indicator_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_correlation_trend_indicator_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_cybernetic_cycle_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_cybernetic_cycle_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_cybernetic_cycle_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_cybernetic_cycle_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_cybernetic_cycle_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_decycler_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_decycler_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_decycler_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_decycler_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_decycler_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_decycler_oscillator_new(nuint fast, nuint slow);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_decycler_oscillator_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_decycler_oscillator_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_decycler_oscillator_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_decycler_oscillator_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_dema_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_dema_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_dema_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_dema_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_dema_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_derivative_oscillator_new(nuint rsiPeriod, nuint smooth1, nuint smooth2, nuint signalPeriod);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_derivative_oscillator_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_derivative_oscillator_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_derivative_oscillator_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_derivative_oscillator_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_detrended_std_dev_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_detrended_std_dev_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_detrended_std_dev_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_detrended_std_dev_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_detrended_std_dev_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_disparity_index_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_disparity_index_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_disparity_index_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_disparity_index_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_disparity_index_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_dpo_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_dpo_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_dpo_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_dpo_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_dpo_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_drawdown_duration_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_drawdown_duration_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_drawdown_duration_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_drawdown_duration_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_drawdown_duration_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_dynamic_momentum_index_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_dynamic_momentum_index_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_dynamic_momentum_index_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_dynamic_momentum_index_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_dynamic_momentum_index_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ehlers_stochastic_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ehlers_stochastic_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ehlers_stochastic_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ehlers_stochastic_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ehlers_stochastic_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ehma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ehma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ehma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ehma_reset(nint handle);
